--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
   </head>
-  <body>
+  <body style="margin:0">
     <div id="root">
-      
     </div>
   </body>
 </html>
